syntax = "proto3";

option csharp_namespace = "InternetShopService_back.Infrastructure.Grpc.Contractors";

package contractors;

// Сервис синхронизации контрагентов
service ContractorSyncService {
  // Получить список контрагентов для синхронизации
  rpc GetContractors (GetContractorsRequest) returns (GetContractorsResponse);
  
  // Получить конкретного контрагента
  rpc GetContractor (GetContractorRequest) returns (Contractor);
  
  // Стриминг контрагентов (для больших объемов)
  rpc StreamContractors (StreamContractorsRequest) returns (stream Contractor);
  
  // Подписка на изменения контрагентов
  rpc SubscribeToChanges (SubscribeRequest) returns (stream ContractorChange);
  
  // Получить список активных сессий контрагента
  rpc GetActiveSessions (GetActiveSessionsRequest) returns (GetActiveSessionsResponse);
  
  // Выполнить команду управления сессиями с получением результата
  rpc ExecuteSessionControl (ExecuteSessionControlRequest) returns (ExecuteSessionControlResponse);
  
  // Получить адреса доставки контрагента из интернет-магазина
  rpc GetContractorDeliveryAddresses (GetContractorDeliveryAddressesRequest) returns (GetContractorDeliveryAddressesResponse);
  
  // Создать адрес доставки контрагента в интернет-магазине
  rpc CreateContractorDeliveryAddress (CreateContractorDeliveryAddressRequest) 
      returns (CreateContractorDeliveryAddressResponse);
  
  // Обновить адрес доставки контрагента в интернет-магазине
  rpc UpdateContractorDeliveryAddress (UpdateContractorDeliveryAddressRequest) 
      returns (UpdateContractorDeliveryAddressResponse);
  
  // Удалить адрес доставки контрагента в интернет-магазине
  rpc DeleteContractorDeliveryAddress (DeleteContractorDeliveryAddressRequest) 
      returns (DeleteContractorDeliveryAddressResponse);
  
  // Синхронизировать все адреса доставки контрагента (полная замена)
  rpc SyncContractorDeliveryAddresses (SyncContractorDeliveryAddressesRequest) 
      returns (SyncContractorDeliveryAddressesResponse);
}

// Запрос списка контрагентов
message GetContractorsRequest {
  optional int32 company_id = 1;
  optional int32 organization_id = 2;
  optional int32 min_sync_version = 3;
  optional int64 updated_since = 4;
  optional int32 page = 5;
  optional int32 page_size = 6;
  optional bool buyers_only = 7;
  optional bool with_corporate_phone = 8;
  optional bool with_create_cabinet = 9;  // Фильтр: только контрагенты с флагом создания кабинета
}

// Ответ со списком контрагентов
message GetContractorsResponse {
  repeated Contractor contractors = 1;
  int32 total_count = 2;
  int32 max_sync_version = 3;
  bool has_more = 4;
}

// Запрос конкретного контрагента
message GetContractorRequest {
  int32 contractor_id = 1;
}

// Запрос стриминга контрагентов
message StreamContractorsRequest {
  optional int32 company_id = 1;
  optional int32 organization_id = 2;
  optional int32 min_sync_version = 3;
  optional bool buyers_only = 4;
  optional bool with_corporate_phone = 5;
}

// Запрос подписки на изменения
message SubscribeRequest {
  optional int32 company_id = 1;
  optional int32 organization_id = 2;
  int32 last_sync_version = 3;
}

// Тип изменения контрагента
enum ContractorChangeType {
  CREATED = 0;
  UPDATED = 1;
  DELETED = 2;
}

// Сообщение об изменении контрагента
message ContractorChange {
  ContractorChangeType change_type = 1;
  Contractor contractor = 2;
  optional SessionControl session_control = 3;  // Управление сессиями
}

// Контрагент
message Contractor {
  // Идентификация
  int32 contractor_id = 1;
  int32 company_id = 2;
  string company_name = 3;
  int32 organization_id = 4;
  string organization_name = 5;
  
  // Группировка
  int32 group = 6;
  bool is_grouped = 7;
  
  // Классификация
  bool is_buyers = 8;
  
  // Основная информация
  string name = 9;
  string full_name = 10;
  string type = 11;
  
  // Реквизиты
  string inn = 12;
  string kpp = 13;
  string ogrn = 14;
  string ogrnip = 15;
  string country = 16;
  string taxation = 17;
  
  // Контакты
  string phone = 18;
  string email = 19;
  string address = 20;
  string address_fact = 21;
  
  // Договор
  string contract_number = 22;
  string contract_date = 23;
  
  // Родительская компания
  int32 parent_company_id = 24;
  string parent_company_name = 25;
  string parent_company_inn = 26;
  
  // Банковские реквизиты
  repeated BankRequisites requisites = 27;
  
  // Скидки на группы номенклатуры
  repeated DiscountRule discount_rules = 28;
  
  // Интернет-магазин
  optional string corporate_phone_number = 29;
  optional int64 corporate_phone_changed_at = 30;
  bool is_create_cabinet = 35;  // Флаг создания личного кабинета в интернет-магазине
  bool is_post_payment = 37;  // Постоплата (контрагент может подтвердить счет без оплаты)
  
  // Служебные поля
  int32 sync_version = 31;
  int64 created_at = 32;
  int64 updated_at = 33;
  string create_user_id = 34;
}

// Банковские реквизиты
message BankRequisites {
  int32 id = 1;
  string bank_name = 2;
  string bik = 3;
  string correspondent_account = 4;
  string account = 5;
  bool is_active = 6;
  int64 date_create = 7;
}

// Правило скидки
message DiscountRule {
  int32 id = 1;
  string name = 2;
  double discount_percent = 3;
  int32 nomenclature_group_id = 4;
  string nomenclature_group_name = 5;
  bool apply_to_subgroups = 6;
  optional int64 valid_from = 7;
  optional int64 valid_to = 8;
  bool is_active = 9;
  optional string description = 10;
  int64 date_create = 11;
  int64 date_update = 12;
  string create_user_id = 13;
  optional string update_user_id = 14;
  optional string comment = 15;
  optional int32 nomenclature_id = 16;   // ID конкретного товара (IsGroup = false), 0 если скидка на группу
  optional string nomenclature_name = 17; // Название товара (кэшируется)
}

// Управление сессиями пользователей интернет-магазина
message SessionControl {
  SessionAction action = 1;                  // Действие для выполнения (должно быть первым полем для совместимости с FimBiz)
  repeated string session_ids = 2;          // Список ID сессий для отключения (пусто = все сессии)
  int32 contractor_id = 3;                  // ID контрагента (должно быть третьим полем для совместимости с FimBiz)
  optional string reason = 4;               // Причина деактивации
  int64 requested_at = 5;                   // Unix timestamp запроса
}

enum SessionAction {
  DISCONNECT_SESSIONS = 0;                  // Отключить указанные сессии (совпадает с FimBiz SessionControlAction.DISCONNECT_SESSIONS)
  DISCONNECT_ALL_SESSIONS = 1;              // Отключить все сессии контрагента (совпадает с FimBiz SessionControlAction.DISCONNECT_ALL_SESSIONS)
}

// Информация о сессии для передачи в FimBiz
message SessionInfo {
  string session_id = 1;     // GUID сессии
  string device_info = 2;    // Информация об устройстве
  string user_agent = 3;     // User-Agent
  string ip_address = 4;     // IP адрес
  int64 created_at = 5;      // Unix timestamp создания
  int64 expires_at = 6;      // Unix timestamp истечения
  bool is_active = 7;        // Активна ли сессия
}

// Запрос списка активных сессий
message GetActiveSessionsRequest {
  int32 contractor_id = 1;
}

// Ответ со списком активных сессий
message GetActiveSessionsResponse {
  repeated SessionInfo sessions = 1;
}

// Запрос на выполнение команды управления сессиями
message ExecuteSessionControlRequest {
  SessionControl session_control = 1;   // Команда управления сессиями
}

// Ответ на выполнение команды управления сессиями
message ExecuteSessionControlResponse {
  bool success = 1;                      // Успешно ли выполнена команда
  string message = 2;                   // Сообщение о результате выполнения
  int32 disconnected_count = 3;         // Количество отключенных сессий
  repeated string disconnected_session_ids = 4;  // ID отключенных сессий
  repeated string error_session_ids = 5;  // ID сессий, которые не удалось отключить
}

// Запрос адресов доставки контрагента
message GetContractorDeliveryAddressesRequest {
  int32 contractor_id = 1;  // ID контрагента в ФимБиз
}

// Ответ со списком адресов доставки
message GetContractorDeliveryAddressesResponse {
  repeated DeliveryAddress addresses = 1;
}

// Адрес доставки контрагента (структурированный)
message DeliveryAddress {
  string id = 1;                        // Локальный ID адреса в интернет-магазине (GUID)
  string address = 2;                   // Улица, дом, корпус и т.д.
  optional string city = 3;             // Город
  optional string region = 4;           // Регион/область
  optional string postal_code = 5;      // Почтовый индекс
  optional string apartment = 6;        // Квартира/офис
  bool is_default = 7;                 // Адрес по умолчанию
  int64 date_create = 8;               // Unix timestamp (секунды с 1970-01-01 UTC)
}

// Запрос на создание адреса доставки контрагента
message CreateContractorDeliveryAddressRequest {
  int32 contractor_id = 1;              // ID контрагента в ФимБиз
  string address = 2;                   // Улица, дом, корпус и т.д.
  optional string city = 3;             // Город
  optional string region = 4;           // Регион/область
  optional string postal_code = 5;      // Почтовый индекс
  optional string apartment = 6;        // Квартира/офис
  bool is_default = 7;                 // Адрес по умолчанию
}

// Ответ на создание адреса доставки
message CreateContractorDeliveryAddressResponse {
  bool success = 1;                      // Успешно ли создан адрес
  string message = 2;                   // Сообщение о результате
  DeliveryAddress address = 3;           // Созданный адрес (с ID из интернет-магазина)
}

// Запрос на обновление адреса доставки контрагента
message UpdateContractorDeliveryAddressRequest {
  int32 contractor_id = 1;              // ID контрагента в ФимБиз
  string address_id = 2;                // ID адреса в интернет-магазине (GUID строка)
  string address = 3;                   // Улица, дом, корпус и т.д.
  optional string city = 4;             // Город
  optional string region = 5;           // Регион/область
  optional string postal_code = 6;      // Почтовый индекс
  optional string apartment = 7;        // Квартира/офис
  bool is_default = 8;                 // Адрес по умолчанию
}

// Ответ на обновление адреса доставки
message UpdateContractorDeliveryAddressResponse {
  bool success = 1;                      // Успешно ли обновлен адрес
  string message = 2;                   // Сообщение о результате
  DeliveryAddress address = 3;           // Обновленный адрес
}

// Запрос на удаление адреса доставки контрагента
message DeleteContractorDeliveryAddressRequest {
  int32 contractor_id = 1;              // ID контрагента в ФимБиз
  string address_id = 2;                // ID адреса в интернет-магазине (GUID строка)
}

// Ответ на удаление адреса доставки
message DeleteContractorDeliveryAddressResponse {
  bool success = 1;                      // Успешно ли удален адрес
  string message = 2;                   // Сообщение о результате
}

// Запрос на синхронизацию всех адресов доставки контрагента (полная замена)
message SyncContractorDeliveryAddressesRequest {
  int32 contractor_id = 1;              // ID контрагента в ФимБиз
  repeated DeliveryAddress addresses = 2; // Список адресов для синхронизации
}

// Ответ на синхронизацию адресов доставки
message SyncContractorDeliveryAddressesResponse {
  bool success = 1;                      // Успешно ли синхронизированы адреса
  string message = 2;                   // Сообщение о результате
  repeated DeliveryAddress addresses = 3; // Синхронизированные адреса (с ID из интернет-магазина)
}

